--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        // 加载 _sidebar.md
        loadSidebar: true,
 	   subMaxLevel: 2,
+       coverpage: true,
        search: 'auto', // 默认值
        formatUpdated: '{MM}/{DD} {HH}:{mm}',
        plugins: [
