--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Alice's Wechat Platform Article Collections</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="">
+  <meta name="description" content="Love You 3000">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link href="https://hahack-1253537070.cos.ap-chengdu.myqcloud.com/images/favicon.png" rel='icon' type='image/x-icon'/>
